samples/_failures_safe/1761395526_fd3169_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_248f8ed4.c: In function ‘main’:
./samples/SAFE/__tmp_248f8ed4.c:147:23: error: expected ‘)’ at end of input
  147 |     print_matrix(&mat1
      |                 ~     ^
      |                       )
./samples/SAFE/__tmp_248f8ed4.c:147:5: error: expected declaration or statement at end of input
  147 |     print_matrix(&mat1
      |     ^~~~~~~~~~~~
